# pyfcf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  publish.yml
examples/: single_figure.py  two_panel.py
pyfcf/: __init__.py  basic.py  version.py
tests/: test_multi_figure.py  test_single_figure.py
