[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfcf"
version = "0.0.1"
authors = [
  { name="Katherine Rosenfeld", email="krosenf@gmail.com" },
]
description = "Package to create standardized, publication quality matplotlib figures"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]