[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfcf"
version = "0.1.1"
authors = [
  { name="Katherine Rosenfeld", email="krosenf@gmail.com" },
]
description = "Package to create standardized, publication quality matplotlib figures"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pyfcf = { path = ".", editable = true }

[tool.pixi.dependencies]
setuptools = ">=70.0.0,<70.1"
wheel = ">=0.43.0,<0.44"
twine = ">=5.1.0,<5.2"

[tool.pixi.system-requirements]
linux="4.18"