[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfcf"
version = "0.1.1"
authors = [
  { name="Katherine Rosenfeld", email="krosenf@gmail.com" },
]
description = "Package to create standardized, publication quality matplotlib figures"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pyfcf = { path = ".", editable = true }

[tool.pixi.dependencies]
setuptools = ">=70.0.0,<70.1"
wheel = ">=0.43.0,<0.44"
twine = ">=5.1.0,<5.2"

[tool.pixi.system-requirements]
linux="4.18"

[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = 'pyfcf/version.py'
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = 'pyfcf/version.py'
search = "__versiondate__ = '\\d{{4}}-\\d{{2}}-\\d{{2}}'"
replace = "__versiondate__ = '{now:%Y-%m-%d}'"
regex = true